# SHIFTPlanner-Robotics

./: LICENSE  README.md  requirements.txt
src/2D-RFICP/: SHIFTPlanner-2D-RFICP-Dynamic Algorithm Experiment.py  SHIFTPlanner-2D-RFICP-Static Algorithm Experiment.py
src/IKD-SWOpt/: CMakeLists.txt  README.md
src/IKD-SWOpt/include/: Astar.h  DistanceField.h  ikd_Tree.h
src/IKD-SWOpt/src/: IKD-SWOpt.cpp  ikd_Tree.cpp
src/SHIFTPlanner/: SHIFTplanner-3DCCP.py  SHIFTplanner-SegmentTrjOptim.py  SHIFTplanner_PLANNER_TRJ_OPTIM.py  __init__.py  kdtree_astar.py
